made car clickable on results, gave it index of 1 and margin-top to make sure doesn't overlap other buttons

--- a/assets/less/shell.less
+++ b/assets/less/shell.less
@@ -1,3 +1,7 @@
+//make result-car clickable
+.result-car{
+	z-index:1;
+}
 // Responsive controls
 
 .res-wrap {
@@ -462,6 +466,9 @@
 		margin: 0 auto;
 		width: 80%;
 
+	}
+	#car-image.result-car{
+		margin-top:40px;
 	}
 	.skid{
 		z-index:-1;
